--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,18 @@ chacha20poly1305 = "0.10"
 ed25519-dalek = { version = "2", features = ["rand_core"] }
 rand_core = { version = "0.6", features = ["getrandom"] }
 x25519-dalek = { version = "2", features = ["static_secrets"] }
+
+[dev-dependencies]
+criterion = "0.5"
+diamond-types = "1"
+flate2 = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
+[[bench]]
+name = "rga_trace"
+harness = false
+
+[[bench]]
+name = "quick_bench"
+harness = false
