--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ x25519-dalek = { version = "2", features = ["static_secrets"] }
 criterion = "0.5"
 diamond-types = "1"
 flate2 = "1"
+proptest = "1.9.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
