Add diamond-types for correctness testing, fix warnings
- Added diamond-types as dev-dependency for reference correctness testing
- trace_correctness tests now verify Together matches diamond-types output
- Fixed unnecessary parentheses warnings in document_api_proptest.rs
- All 125 tests pass, all benchmarks and comparisons work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ x25519-dalek = { version = "2", features = ["static_secrets"] }
 
 [dev-dependencies]
 proptest = "1.9.0"
+flate2 = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+diamond-types = "1"  # Reference implementation for correctness testing
 
 [[bench]]
 name = "version_bench"
