feat(bench): add comprehensive CRDT benchmark suite and analysis
Phase 4 complete:
- benches/rga_comparison.rs: Criterion benchmarks for all scenarios
- benches/rga_quick.rs: Quick comparison binary
- research/crdt-comparison-results.md: Full analysis with results

Key findings:
- LoroRga: Best overall balance, Fugue algorithm
- DiamondRga: Fast deletes, good span coalescing
- ColaRga: Simple but O(n^2) on random inserts
- JsonJoyRga: Dual-tree concept valuable but splay overhead
- YjsRga: Battle-tested but linear deletes

Recommended synthesis: B-tree + Fugue + cursor caching + ID index

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,25 @@ flate2 = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 diamond-types = "1"  # Reference implementation for correctness testing
+criterion = "0.5"
+rand = "0.8"
 
 [[bench]]
 name = "version_bench"
 harness = false
+
+[[bench]]
+name = "rga_comparison"
+harness = false
+
+[[bin]]
+name = "rga_quick"
+path = "benches/rga_quick.rs"
+required-features = ["bench"]
+
+[features]
+bench = ["rand"]
+
+[dependencies.rand]
+version = "0.8"
+optional = true
