feat: create pedagogy crate, add fuzz tests, research plan
Major changes:
- Created pedagogy crate with CRDT primitives and alternative implementations
- Added fuzz tests for commutativity, associativity, idempotence
- Added versioning snapshot consistency tests
- Added research plan for generic/nested CRDTs
- Cleaned up rga.rs documentation

Benchmarks show no regressions (all traces still beat diamond-types):
- sveltecomponent: 0.83x
- rustcode: 0.82x
- seph-blog1: 0.56x
- automerge-paper: 0.29x

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
+[workspace]
+members = [".", "crates/pedagogy"]
+exclude = ["comparisons/criterion"]
+resolver = "3"
+
 [package]
 name = "together"
 version = "0.1.0"
