feat: add AFL fuzz testing infrastructure and documentation
- Add AFL fuzzer (fuzz_rga.rs) and crash reproducer (repro_crash.rs)
- Add fuzz corpus with seed inputs
- Add KeyPair::from_seed() for deterministic test keys
- Add procedures/05-coverage-gap-testing.md with test strategy
- Add research/43-api-reference.md with API documentation
- Add research/44-test-coverage-analysis.md with gap analysis

The fuzz testing found multiple crashes related to the split-sibling
ordering bug (fixed in previous commit) and potential issues with
delete propagation semantics.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,21 @@ required-features = ["bench"]
 
 [features]
 bench = ["rand"]
+afl = ["dep:afl"]
 
 [dependencies.rand]
 version = "0.8"
 optional = true
+
+[dependencies.afl]
+version = "0.15"
+optional = true
+
+[[bin]]
+name = "fuzz_rga"
+path = "src/bin/fuzz_rga.rs"
+required-features = ["afl"]
+
+[[bin]]
+name = "repro_crash"
+path = "src/bin/repro_crash.rs"
